infra/terraform/modules/ecs_deployment/ecs_service_tileserver.tf
# ECS - Define service for ECS Tile API cluster
resource "aws_ecs_service" "tileserver-api" {

  # General
  name            = "tileserver-api"
  cluster         = aws_ecs_cluster.backend_ecs_cluster.arn
  task_definition = aws_ecs_task_definition.tileserver-api.arn
  iam_role      = data.aws_iam_role.ecs_task_execution_role.arn
  depends_on = [
    data.aws_iam_role.ecs_task_execution_role
  ]

  # Deployment Params
  launch_type                        = "EC2"
  scheduling_strategy                = "DAEMON"
  enable_ecs_managed_tags            = true
  propagate_tags                     = "SERVICE"
  deployment_maximum_percent         = 200
  deployment_minimum_healthy_percent = 100
  health_check_grace_period_seconds  = 30
  enable_execute_command             = true
  force_new_deployment               = true


  load_balancer {
    target_group_arn = aws_lb_target_group.tileserver_target_grp.arn
    container_name   = "nginx"
    container_port   = 80
  }

  placement_constraints {
    type       = "memberOf"
    expression = "attribute:ecs.availability-zone in [us-east-1f, us-east-1d]"
  }

  tags = {
    name = "tileserver-api-service"
  }
}
